tests/spec/emit/snapshots/select_send_and_receive.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> int {
    let tx = Channel.new<int>();
    let rx = Channel.new<int>();
  
    select {
      tx.send(42) => 1,
      let Some(v) = rx.receive() => v,
      _ => 0,
    }
  }
---
package main

func test() int {
	tx := make(chan int)
	rx := make(chan int)
	ch_1 := rx
	for {
		select {
		case tx <- 42:
			return 1
		case v, ok := <-ch_1:
			if ok {
				return v
			}
			ch_1 = nil
			continue
		default:
			return 0
		}
	}
}
