tests/spec/emit/snapshots/select_send_before_shorthand_receive_eval_order.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn mark(log: Channel<int>, tag: int) -> int {
    log.send(tag)
    tag
  }
  
  fn choose(log: Channel<int>, tag: int, ch: Channel<int>) -> Channel<int> {
    let _ = mark(log, tag)
    ch
  }
  
  fn main() {
    let log = Channel.buffered<int>(8)
    let send_ch = Channel.buffered<int>(1)
    let recv_ch = Channel.buffered<int>(1)
    recv_ch.send(42)
  
    let _ = select {
      send_ch.send(mark(log, 1)) => 0,
      let Some(v) = choose(log, 2, recv_ch).receive() => v,
      _ => -1,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func mark(log chan int, tag int) int {
	lisette.ChannelSend(log, tag)
	return tag
}

func choose(log chan int, tag int, ch chan int) chan int {
	mark(log, tag)
	return ch
}

func main() {
	log := make(chan int, 8)
	send_ch := make(chan int, 1)
	recv_ch := make(chan int, 1)
	lisette.ChannelSend(recv_ch, 42)
	var tmp_1 int
	send_val_2 := mark(log, 1)
	ch_3 := choose(log, 2, recv_ch)
	for {
		select {
		case send_ch <- send_val_2:
			tmp_1 = 0
		case v, ok := <-ch_3:
			if ok {
				tmp_1 = v
			} else {
				ch_3 = nil
				continue
			}
		default:
			tmp_1 = -1
		}
		break
	}
	_ = tmp_1
}
