tests/spec/emit/snapshots/select_send_channel_expression_hoisted.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let ch1 = Channel.buffered<int>(1)
    let ch2 = Channel.buffered<int>(1)
  
    let ch = if true { ch1 } else { ch2 }
    let result = select {
      ch.send(1) => 0,
      _ => 1,
    }
  
    fmt.Println(result)
  }
---
package main

import "fmt"

func main() {
	ch1 := make(chan int, 1)
	ch2 := make(chan int, 1)
	var ch chan int
	if true {
		ch = ch1
	} else {
		ch = ch2
	}
	var result int
	select {
	case ch <- 1:
		result = 0
	default:
		result = 1
	}
	fmt.Println(result)
}
