tests/spec/emit/snapshots/select_send_hoisted_temp_no_redeclare.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn get(ch: Channel<int>) -> Channel<int> {
    ch
  }
  
  fn main() {
    let ch = Channel.buffered<int>(1)
  
    select {
      (&get(ch)).send(1) => { let _ = 0 },
      _ => { let _ = 1 },
    }
  
    let ref_1 = 2
    let _ = ref_1
  }
---
package main

func get(ch chan int) chan int {
	return ch
}

func main() {
	ch := make(chan int, 1)
	ref := get(ch)
	select {
	case ref <- 1:
	default:
	}
}
