tests/spec/emit/snapshots/select_send_value_eval_order.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_ch() -> Channel<int> { Channel.new<int>() }
  
  fn main() {
    let to_send = if true { 1 } else { 0 }
    select {
      make_ch().send(to_send) => { let _ = 0; },
    }
  }
---
package main

func makeCh() chan int {
	return make(chan int)
}

func main() {
	var to_send int
	if true {
		to_send = 1
	} else {
		to_send = 0
	}
	select {
	case makeCh() <- to_send:
	}
}
