tests/spec/emit/snapshots/select_send_value_expression_hoisted.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let ch = Channel.buffered<int>(1)
    let to_send = if true { 1 } else { 2 }
    let result = select {
      ch.send(to_send) => 0,
      _ => 1,
    }
    fmt.Println(result)
  }
---
package main

import "fmt"

func main() {
	ch := make(chan int, 1)
	var to_send int
	if true {
		to_send = 1
	} else {
		to_send = 2
	}
	var result int
	select {
	case ch <- to_send:
		result = 0
	default:
		result = 1
	}
	fmt.Println(result)
}
