tests/spec/emit/snapshots/select_shorthand_receive_complex_unused_recv.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  struct P { v: int }
  fn test() {
    let ch = Channel.buffered<P>(1)
    ch.send(P { v: 1 })
    select {
      let Some(P { v }) = ch.receive() => (),
      _ => (),
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type P struct {
	v int
}

func test() {
	ch := make(chan P, 1)
	lisette.ChannelSend(ch, P{v: 1})
	ch_1 := ch
	for {
		select {
		case recv_2, ok := <-ch_1:
			if ok {
				_ = recv_2
			} else {
				ch_1 = nil
				continue
			}
		default:
		}
		break
	}
}
