tests/spec/emit/snapshots/select_struct_pattern.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  struct Message { id: int, data: int }
  
  fn test(ch: Receiver<Message>) -> int {
    select {
      let Some(Message { id, data }) = ch.receive() => id + data,
      _ => 0,
    }
  }
---
package main

type Message struct {
	id   int
	data int
}

func test(ch <-chan Message) int {
	ch_1 := ch
	for {
		select {
		case recv_2, ok := <-ch_1:
			if ok {
				return recv_2.id + recv_2.data
			}
			ch_1 = nil
			continue
		default:
			return 0
		}
	}
}
