tests/spec/emit/snapshots/select_struct_pattern_on_go_interface_uses_comma_ok.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn drain(ch: Receiver<shapes.Shape>) -> int {
    select {
      let Some(shapes.Rect { W: w, H: h }) = ch.receive() => w * h,
      _ => 0,
    }
  }
---
package main

import "example.com/shapes"

func drain(ch <-chan shapes.Shape) int {
	ch_1 := ch
	for {
		select {
		case recv, ok := <-ch_1:
			if ok {
				asserted, ok := recv.(shapes.Rect)
				if ok {
					return asserted.W * asserted.H
				}
				return 0
			}
			ch_1 = nil
			continue
		default:
			return 0
		}
	}
}
